--- a/.gitignore
+++ b/.gitignore
@@ -12,16 +12,17 @@
 *.o
 *.sdb
 *.obj.dmp
-html/
-nbproject/private/
-nbproject/Package-*.bash
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
-funclist
-nbproject/Makefile-*
-disassembly/
+# There's probably a better way of doing this but im malding over this gitignore so wtv
+**/html/
+**/nbproject/private/
+**/nbproject/Package-*.bash
+**/build/
+**/nbbuild/
+**/dist/
+**/nbdist/
+**/nbactions.xml
+**/nb-configuration.xml
+**/funclist
+**/nbproject/Makefile-*
+**/disassembly/
 *.map
