Updated gitignore and makefile

--- a/firmware/kalman_board.X/kalman_lib/makefile
+++ b/firmware/kalman_board.X/kalman_lib/makefile
@@ -1,3 +1,6 @@
 # not a proper make file
 # but just use this command for the time being
 gcc kalman_lib.h kalman_test.c kalman_lib.c orientation_conversion.c -lm -o k
+
+# Use this command for orientation_test.c
+gcc orientation_test.c kalman_lib.c orientation_conversion.c -lm -o o_test
