--- a/python_stuff/visualize_generated_data.yaml
+++ b/python_stuff/visualize_generated_data.yaml
@@ -2,8 +2,8 @@
 
 inputs:
 
-  duration: 10
-  dt: 0.1
+  duration: 20
+  dt: 0.01
 
   # missing a or tau is implicitly [0,0,0]
   events:
@@ -17,30 +17,33 @@ inputs:
     tau: [1,0,0]
   -
     t: 7
+    a: [0,1,0]
+  -
+    t: 9
 
 outputs:
 - t
 - x
 - y
 - z
-- noisy_x
-- noisy_y
-- noisy_z
+- sensor_x
+- sensor_y
+- sensor_z
 - vx
 - vy
 - vz
 - ax
 - ay
 - az
-- noisy_ax
-- noisy_ay
-- noisy_az
+- sensor_ax
+- sensor_ay
+- sensor_az
 - omega_x
 - omega_y
 - omega_z
-- noisy_omega_x
-- noisy_omega_y
-- noisy_omega_z
+- sensor_omega_x
+- sensor_omega_y
+- sensor_omega_z
 - tau_x
 - tau_y
 - tau_z
