updated makefile dependency

--- a/firmware/kalman_board.X/kalman_lib/makefile
+++ b/firmware/kalman_board.X/kalman_lib/makefile
@@ -2,10 +2,10 @@ CC=gcc
 CFLAGS=-I. -Wall
 
 # running `make` will invoke the first recipe
-kalman_test: kalman_lib.o data.o
+kalman_test: kalman_lib.o data.o orientation_conversion.o
 	$(CC) $(CFLAGS) -o kalman_test kalman_test.c $^
 
-orientation_test: kalman_lib.o data.o
+orientation_test: orientation_conversion.o kalman_lib.o
 	$(CC) $(CFLAGS) -o orientation_test orientation_test.c $^
 
 *.o: *.c
