--- a/firmware/kalman_board.X/nbproject/Makefile-genesis.properties
+++ b/firmware/kalman_board.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Sat Jun 03 21:10:23 EDT 2023
+#Tue Jun 06 09:20:56 EDT 2023
 default.languagetoolchain.version=4.21
-default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.05\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.3.58
+default.Pack.dfplocation=/Applications/microchip/mplabx/v6.05/packs/Microchip/PIC32MZ-EF_DFP/1.3.58
 conf.ids=default
-default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.21\\bin
+default.languagetoolchain.dir=/Applications/microchip/xc32/v4.21/bin
 default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=de2d3bc95a22a3f432c2e39f49efafbc
-host.id=f30y-38r9-m
-configurations-xml=db3605c9492239e16d976890b65caefb
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=bcd6e5453a11ce86aaffd5305e838602
+host.id=32hw-485s-pt
+configurations-xml=a9ad2bf2928cddd4a1bd231d39ab49d7
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
 default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=dd22c4b79ea45fd5e4e74f71c232a17a
-proj.dir=C\:\\Users\\lanam\\OneDrive - University of Waterloo\\Documents\\WaterlooRocketry\\payload-2023-software\\firmware\\kalman_board.X
-host.platform=windows
+proj.dir=/Users/ozayrraazi/Documents/Rocketry/payload-2023-software/firmware/kalman_board.X
+host.platform=mac
