--- a/firmware/kalman_board.X/nbproject/Makefile-genesis.properties
+++ b/firmware/kalman_board.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,14 @@
 #
-#Tue Jun 06 21:20:23 EDT 2023
+#Thu Jun 08 06:18:04 EDT 2023
 default.languagetoolchain.version=4.21
-default.Pack.dfplocation=/Applications/microchip/mplabx/v6.05/packs/Microchip/PIC32MZ-EF_DFP/1.3.58
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.00\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.3.58
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc32/v4.21/bin
-default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=de2d3bc95a22a3f432c2e39f49efafbc
-host.id=32hw-485s-pt
-configurations-xml=b0d139bfec5b4a92c57e097823a88a3a
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5ac7a99e4b1de1ea64248c04a43532ad
-default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=dd22c4b79ea45fd5e4e74f71c232a17a
-proj.dir=/Users/ozayrraazi/Documents/Rocketry/payload-2023-software/firmware/kalman_board.X
-host.platform=mac
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.21\\bin
+default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=e4472a864cace3fb7127149b7c727f38
+host.id=j1ux-perp-0
+configurations-xml=04677863a21b1768f98829e14b2a600c
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
+user-defined-mime-resolver-xml=none
+default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=12c9a46bd95f04a1118c0f23fa66f7c4
+proj.dir=C\:\\Users\\joedo\\Documents\\UW Rocketry\\payload-2023-software\\firmware\\kalman_board.X
+host.platform=windows
