--- a/firmware/kalman_board.X/nbproject/Makefile-genesis.properties
+++ b/firmware/kalman_board.X/nbproject/Makefile-genesis.properties
@@ -1,13 +1,14 @@
 #
-#Fri Jun 09 13:47:05 EDT 2023
+#Fri Jun 09 23:58:53 EDT 2023
 default.languagetoolchain.version=4.21
-default.Pack.dfplocation=/Applications/microchip/mplabx/v6.10/packs/Microchip/PIC32MZ-EF_DFP/1.3.58
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.00\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.3.58
 conf.ids=default
-default.languagetoolchain.dir=/Applications/microchip/xc32/v4.21/bin
-default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=453816bbff5fc8c544047982c7194139
-host.id=32hw-485s-pt
-configurations-xml=3fd55f2479bf740b9fe2f375d167a141
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ff725c3d3fe40010a04a4bae132aaf51
-default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=457e2f6305c9d689e1ea1beea600b28b
-proj.dir=/Users/ozayrraazi/Documents/Rocketry/payload-2023-software/firmware/kalman_board.X
-host.platform=mac
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc32\\v4.21\\bin
+default.com-microchip-mplab-nbide-toolchain-xc32-XC32LanguageToolchain.md5=e4472a864cace3fb7127149b7c727f38
+host.id=j1ux-perp-0
+configurations-xml=8e4a8e46659ac83c96e6cb8deff00890
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e02ca5e9f5042ffd365b42ab82d3a9b
+user-defined-mime-resolver-xml=none
+default.com-micrcohip-mplab-mdbcore-pkob4-PKOB4ToolImpl.md5=12c9a46bd95f04a1118c0f23fa66f7c4
+proj.dir=C\:\\Users\\joedo\\Documents\\UW Rocketry\\payload-2023-software\\firmware\\kalman_board.X
+host.platform=windows
